--- a/Lesson11/src/index.html
+++ b/Lesson11/src/index.html
@@ -8,20 +8,107 @@
     <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
-    <header class="bg-[#F0F0F0]">
-        <nav class="lg:w-[80%] m-auto flex items-center lg:justify-between justify-around gap-[100px]">
+    <header class="bg-[#F0F0F0] py-[20px]">
+        <nav class="lg:w-[80%] w-[90%] m-auto flex items-center justify-between">
             <img src="./Photo/лого.png" alt="">
             <ul class="hidden lg:flex items-center gap-[50px]">
                 <li class="text-[18px] font-[600] hover:drop-shadow-[8px_8px_1px_gray] transition-all duration-[0.3s] ease-in-out  text-black hover:text-white cursor-pointer hover:translate-y-[3px]"><a href="">Обо мне</a</li>
                 <li class="text-[18px] font-[600] hover:drop-shadow-[8px_8px_1px_gray] transition-all duration-[0.3s] ease-in-out  text-black hover:text-white cursor-pointer hover:translate-y-[3px]"><a href="">Занятия</a></li>
                 <li class="text-[18px] font-[600] hover:drop-shadow-[8px_8px_1px_gray] transition-all duration-[0.3s] ease-in-out  text-black hover:text-white cursor-pointer hover:translate-y-[3px]"><a href="">Запись</a></li>
             </ul>
-            <div class="lg:hidden"><i class="cursor-pointer hover:text-white hover:bg-black hover:rounded-[5px] hover:p-[5px] text-[30px] fa-solid fa-bars-staggered"></i></div>
+            <div class="lg:hidden"><i class="cursor-pointer hover:translate-x-[-5px] transition-all duration-[0.15s] ease-in hover:text-white hover:bg-black hover:rounded-[5px] hover:p-[5px] text-[30px] fa-solid fa-bars-staggered"></i></div>
         </nav>
 
-        <section>
-
+        <section class="w-[90%] lg:w-[80%] relative m-auto flex flex-col lg:flex-row lg:items-center">
+            <img src="./Photo/Гитарист + фигуры.png" alt="">
+            <aside class="grid relative z-[1] grid-rows-[41px_68px_40px_60px] gap-[30px] grid-cols-[200px_140px]">
+                <img src="./Photo/Subtract.png" alt="" class="absolute z-[-1] lg:right-[-20px] blur-[1px] right-[-18px] top-[20px]">
+                <div class="col-[1/-1] ml-[10px] mt-[70px] flex items-center gap-[15px]">
+                    <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-skype"></i>
+                    <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-vk"></i>
+                    <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-telegram"></i>
+                    <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-instagram"></i>
+                </div>
+                <h1 class="col-[1/-1] text-[70px] font-[600]"><span class="underline">Я </span>Виктор</h1>
+                <p class="col-[1/-1] text-[16px] font-[400]">Репетитор игры на гитаре с семилетним опытом преподавания</p>
+                <button class="hover:scale-[0.9] hover:bg-black transition-all duration-[0.2s] ease-in-out bg-[#F28B64] rounded-[100px] w-[200px] h-[60px] text-white font-[600] text-[18px] leading-[19px]">Забранировать <br> урок</button>
+                <div class="flex items-center gap-[10px]">
+                    <img src="./Photo/Иконка чата 1.png" alt="">
+                    <p class="text-[16px] font-[400] leading-[17px]">Есть <br> вопросы?</p>
+                </div>
+            </aside>
         </section>
     </header>
+
+    <main>
+        <section class="w-[90%] lg:w-[80%] lg:py-[30px] m-auto flex lg:justify-between lg:grid grid-rows-[88px_360px_99px] lg:grid-cols-[360px_360px_360px] flex-col gap-[30px] text-[52px] text-center font-[600]">
+            <h1 class="text-[52px] col-[1/-1] font-[600] lg:text-start"><span class="border-b-[2px] border-black">Пр</span>еподаю</h1>
+            <article class="hover:scale-[1.1] transition-all duration-[0.2s] ease-in-out hover:text-white bg-[#E2E2E2] flex relative z-[1] items-center pt-[20px] justify-center shadow-[0_4px_4px_0_black] rounded-[10px]">
+                <img src="./Photo/Subtract.png" alt="" class="absolute z-[-1] left-[-100px] bottom-[-100px] overflow-hidden">
+                <img src="./Photo/Электро-гитара 1.png" alt="">
+                <h4 class="text-[36px] leading-[44px] font-[600] rotate-[90deg]">Электро <br> гитара</h4>
+            </article>
+            <article class="hover:scale-[1.1] transition-all duration-[0.2s] ease-in-out hover:text-white bg-[#F28B64] flex relative z-[2] items-center pt-[20px] justify-center shadow-[0_4px_4px_0_black] rounded-[10px]">
+                <img src="./Photo/Акустика-гитара 1.png" alt="" class="ml-[50px] mr-[-50px]">
+                <h4 class="text-[36px] leading-[44px] font-[600] rotate-[90deg]">Акустическая <br> гитара</h4>
+            </article>
+            <article class="hover:scale-[1.1] transition-all duration-[0.2s] ease-in-out hover:text-white bg-[#5290EA] flex relative z-[1] items-center pt-[20px] justify-center shadow-[0_4px_4px_0_black] rounded-[10px]">
+                <img src="./Photo/Subtract.png" alt="" class="hidden lg:inline absolute z-[-1] right-[-100px] top-[-100px]">
+                <img src="./Photo/Укулелли-гитара 1.png" alt="">
+                <h4 class="text-[36px] leading-[44px] font-[600] rotate-[90deg]">Электро <br> гитара</h4>
+            </article>
+            <div class="lg:flex lg:flex-row grid col-[1/-1] justify-between gap-[50px] lg:gap-[0] grid-rows-2 grid-cols-[150px_150px] items-center w-[100%] lg:justify-evenly">
+                <article class="flex lg:flex-row flex-col items-center gap-[10px]">
+                    <img src="./Photo/01-Иконка.png" alt="">
+                    <p class="flex flex-col text-[18px] lg:text-start font-[400]"><span class="text-[48px] mb-[-15px] font-[600]">7</span>лет<br>преподавания</p>
+                </article>
+                <article class="flex lg:flex-row flex-col items-center gap-[10px]">
+                    <img src="./Photo/04-Иконка_вторая секкция 1.png" alt="">
+                    <p class="flex flex-col text-[18px] text-start font-[400]"><span class="text-[48px] mb-[-15px] font-[600]">276</span>Отзывов<br>на 5 звёзд</p>
+                </article>
+                <article class="flex lg:flex-row flex-col items-center gap-[10px]">
+                    <img src="./Photo/03-Иконка_вторая секкция 1.png" alt="">
+                    <p class="flex flex-col text-[18px] text-start font-[400]"><span class="text-[48px] mb-[-15px] font-[600]">314</span>Студентов<br>обученно</p>
+                </article>
+                <article class="flex lg:flex-row flex-col items-center gap-[10px]">
+                    <img src="./Photo/02-Иконка_вторая секкция 1.png" alt="">
+                    <p class="flex flex-col text-[18px] text-start font-[400]"><span class="text-[48px] mb-[-15px] font-[600]">2000</span>часов<br>преподавания</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="flex lg:flex-row px-[10px] lg:px-0 gap-[20px] lg:gap-0 flex-col py-[50px] items-center justify-evenly bg-[#F0F0F0]">
+            <div class="relative z-[1]">
+                <img src="./Photo/Subtract.png" alt="" class="hidden lg:inline w-[282px] h-[282px] absolute left-[-20px] top-[-100px]">
+                <img src="./Photo/Subtract2.png" alt="" class="absolute left-[-150px]">
+                <h1 class="text-[72px] font-[600] relative z-[1]">Обучение</h1>
+            </div>
+            <aside class="flex flex-col gap-[40px] lg:text-start text-center lg:gap-[20px]">
+                <h1 class="lg:text-[72px] text-[50px] font-[600] leading-[65px]"><span class="border-b-[2px] border-black">Го</span>товлю <br> виртуозов</h1>
+                <p class="lg:max-w-[530px] text-[18px] font-[400] leading-[22px]">Равным образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Товарищи! реализация намеченных плановых заданий позволяет выполнять важные задания по разработке систем массового участия. <br> <br> 
+
+                    Повседневная практика показывает, что рамки и место обучения кадров позволяет оценить значение новых предложений. Не следует, однако забывать, что рамки и место обучения кадров влечет за собой процесс внедрения и модернизации систем массового участия.</p>
+                <div class="flex items-center gap-[20px]">
+                    <button class="hover:scale-[0.9] hover:bg-black transition-all duration-[0.2s] ease-in-out bg-[#F28B64] rounded-[100px] w-[200px] h-[60px] text-white font-[600] text-[18px] leading-[19px]">Забранировать <br> урок</button>
+                    <img src="./Photo/Иконка чата 1.png" alt="">
+                    <p class="text-[16px] font-[400] leading-[17px]">Есть <br> вопросы?</p>
+                </div>
+            </aside>
+        </section>
+    </main>
+
+    <footer class="flex lg:flex-row flex-col-reverse lg:pt-0 pt-[40px] items-center gap-[100px]">
+        <img src="./Photo/Гриф 1.png" alt="" class="relative bottom-[0]">
+        <aside class="flex flex-col gap-[20px] lg:items-start items-center">
+            <h1 class="lg:text-[72px] text-[50px] lg:text-start text-center font-[600] leading-[50px] lg:leading-[80px]"><span class="border-b-[2px] border-black">За</span>пишись на <br class="hidden lg:block">
+                пробный урок</h1>
+            <div class="flex items-center gap-[15px]">
+                <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-skype"></i>
+                <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-vk"></i>
+                <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-telegram"></i>
+                <i class="rounded-full p-[5px] cursor-pointer hover:bg-black hover:text-white hover:scale-[1.3] transition-all duration-[0.2s] ease-in-out bg-[lightgray] text-[25px] border-[1px] border-[#488AEA] fa-brands fa-instagram"></i>
+            </div>
+        </aside>
+    </footer>
 </body>
 </html>
